<resources>
    <string name="app_name">Kwizz</string>
    <string name="play_game">Play Game</string>
    <string name="join_group">Join Group</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="quit">Quit</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="group_name">Group name</string>
    <string name="join">Join</string>
    <string name="x">X</string>
    <string name="change_name">Change name</string>
    <string name="change_password">Change password</string>
    <string name="create_group_quiz">Create group quiz</string>
    <string name="new_name">New name</string>
    <string name="change">Change</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="sign_up_und"><u>Sign up</u></string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email (optional)</string>
    <string name="name">Name</string>
</resources>
