<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/play_game_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/play_game"/>

    <Button
        android:id="@+id/join_group_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/join_group"/>

    <Button
        android:id="@+id/leaderboard_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/leaderboard"/>

    <Button
        android:id="@+id/setting_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/setting"/>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/logout"/>

</LinearLayout>