<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="false">

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:inputType="textPersonName"
        android:visibility="visible"
        android:importantForAutofill="no"
        android:singleLine="true"
        android:gravity="center"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:inputType="textPassword"
        android:visibility="visible"
        android:importantForAutofill="no"
        android:singleLine="true"
        android:gravity="center"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        android:text="@string/login"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_und"
        android:textStyle="bold"
        android:textSize="15sp" />

</LinearLayout>