<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/group_name_edit_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:singleLine="true"
        android:hint="@string/group_name"
        android:autofillHints="@string/group_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/group_password_edit_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:singleLine="true"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/join_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:text="@string/join"/>

</LinearLayout>