<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:visibility="visible"
        android:singleLine="true"
        android:gravity="center"/>

    <TextView
        android:id="@+id/username_error_msg_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:visibility="visible"
        android:singleLine="true"
        android:gravity="center" />

    <TextView
        android:id="@+id/password_error_msg_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/confirm_password_edit_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/confirm_password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:visibility="visible"
        android:singleLine="true"
        android:gravity="center" />

    <TextView
        android:id="@+id/confirm_password_error_msg_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:visibility="visible"
        android:singleLine="true"
        android:gravity="center" />

    <TextView
        android:id="@+id/email_error_msg_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/name"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:visibility="visible"
        android:singleLine="true"
        android:gravity="center" />

    <TextView
        android:id="@+id/name_error_msg"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="15sp" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"/>

</LinearLayout>
